# url_meta-data

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  ruff.toml
docker/: Dockerfile.local  Dockerfile.production  entrypoint.sh
src/: main.py
src/core/: config.py  constants.py  database.py  health.py
src/database/: base_class.py  crud_base.py
src/url_manager/: crud.py  models.py  router.py  schema.py  service.py
tests/: conftest.py  test_models.py  test_router.py  test_service.py
