[project]
name = "metaurls"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beanie>=1.29.0",
    "fastapi[standard]>=0.136.0",
    "motor>=3.6.0,<3.7",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "pre-commit>=4.5.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "mongomock-motor>=0.0.34",
    "ruff>=0.15.11",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
